docs: Document known jdk10 problems