@@ -85,3 +85,14 @@ Client dependencies:
 Server dependencies:
 
     $ gradle dependencyUpdates -Drevision=release
+
+## Known java 10 problems
+
+### Gradle
+
+To make gradle work with jdk10 you have to run it with jdk8 and set the compiling jdk path to 10.
+You can do this by putting this into your *~/.gradle/gradle.properties*: `org.gradle.java.home=/path_to_jdk10`
+
+When running gradle tasks you then have to set `-Djava.endorsed.dirs=` as shown in this example:
+
+    $ gradle bootRun -Djava.endorsed.dirs=
